--- a/Deployment/docker-compose.yml
+++ b/Deployment/docker-compose.yml
@@ -1,13 +1,13 @@
 version: '3.3'
 services:
-        zookeeper:
-            image: wurstmeister/zookeeper
-            ports:
-                - "2181"
-            hostname: zookeeper
-        kafka:
-            image: wurstmeister/kafka
-            command: [start-kafka.sh]
+    zookeeper:
+        image: wurstmeister/zookeeper
+        ports:
+            - "2181"
+        hostname: zookeeper
+    kafka:
+        image: wurstmeister/kafka
+        command: [start-kafka.sh]
         ports:
             - "9092:9092"
         hostname: kafka
@@ -23,7 +23,7 @@ services:
             - /var/run/docker.sock:/var/run/docker.sock
         depends_on:
             - "zookeeper"
-db:
+    db:
         image: mysql:5.7
         restart: always
         environment:
@@ -43,6 +43,32 @@ db:
             # Where our data will be persisted
         volumes:
             - my-db:/var/lib/mysql
-    # Names our volume
+        # Names our volume
+    
+    receiver:
+        image: receiver
+        ports:
+            - “8080:8080”
+        depends_on:
+            - “kafka”
+    storage:
+        image: storage
+        ports:
+            - "8090:8090"
+        depends_on:
+            - kafka
+    processing:
+        image: processing
+        ports:
+            - "8100:8100"
+        depends_on:
+            - storage
+    audit:
+        image: audit
+        ports:
+            - "8110:8110"
+        depends_on:
+            - kafka
+
 volumes:
-        my-db:
+    my-db:
