--- a/Deployment/docker-compose.yml
+++ b/Deployment/docker-compose.yml
@@ -48,27 +48,27 @@ services:
     receiver:
         image: receiver
         ports:
-            - “8080:8080”
+            - "8080:8080"
         depends_on:
-            - “kafka”
+            - "kafka"
     storage:
         image: storage
         ports:
             - "8090:8090"
         depends_on:
-            - kafka
+            - "kafka"
     processing:
         image: processing
         ports:
             - "8100:8100"
         depends_on:
-            - storage
+            - "storage"
     audit:
         image: audit
         ports:
             - "8110:8110"
         depends_on:
-            - kafka
+            - "kafka"
 
 volumes:
     my-db:
