--- a/Deployment/docker-compose.yml
+++ b/Deployment/docker-compose.yml
@@ -69,6 +69,13 @@ services:
             - "8110:8110"
         depends_on:
             - "kafka"
+    dashboard:
+        image: dashboard
+        ports:
+            - "3000:3000"
+        depends_on:
+            - "processing"
+            - "audit"
 
 volumes:
     my-db:
