--- a/Deployment/docker-compose.yml
+++ b/Deployment/docker-compose.yml
@@ -56,24 +56,40 @@ services:
             - "8080:8080"
         depends_on:
             - "kafka"
+        environment:
+            - TARGET_ENV=test
+        volumes:
+            - /home/azureuser/config/receiver:/config
     storage:
         image: storage
         ports:
             - "8090:8090"
         depends_on:
             - "kafka"
+        environment:
+            - TARGET_ENV=test
+        volumes:
+            - /home/azureuser/config/storage:/config
     processing:
         image: processing
         ports:
             - "8100:8100"
         depends_on:
             - "storage"
+        environment:
+            - TARGET_ENV=test
+        volumes:
+            - /home/azureuser/config/processing:/config
     audit:
         image: audit
         ports:
             - "8110:8110"
         depends_on:
             - "kafka"
+        environment:
+            - TARGET_ENV=test
+        volumes:
+            - /home/azureuser/config/audit_log:/config
     dashboard:
         image: dashboard
         ports:
