--- a/Deployment/docker-compose.yml
+++ b/Deployment/docker-compose.yml
@@ -60,6 +60,7 @@ services:
             - TARGET_ENV=test
         volumes:
             - /home/azureuser/config/receiver:/config
+            - /home/azureuser/logs
     storage:
         image: storage
         ports:
@@ -70,6 +71,7 @@ services:
             - TARGET_ENV=test
         volumes:
             - /home/azureuser/config/storage:/config
+            - /home/azureuser/logs
     processing:
         image: processing
         ports:
@@ -80,6 +82,7 @@ services:
             - TARGET_ENV=test
         volumes:
             - /home/azureuser/config/processing:/config
+            - /home/azureuser/logs
     audit:
         image: audit
         ports:
@@ -90,6 +93,7 @@ services:
             - TARGET_ENV=test
         volumes:
             - /home/azureuser/config/audit_log:/config
+            - /home/azureuser/logs
     dashboard:
         image: dashboard
         ports:
