--- a/Deployment/docker-compose.yml
+++ b/Deployment/docker-compose.yml
@@ -60,7 +60,7 @@ services:
             - TARGET_ENV=test
         volumes:
             - /home/azureuser/config/receiver:/config
-            - /home/azureuser/logs
+            - /home/azureuser/logs:/logs
     storage:
         image: storage
         ports:
@@ -71,7 +71,7 @@ services:
             - TARGET_ENV=test
         volumes:
             - /home/azureuser/config/storage:/config
-            - /home/azureuser/logs
+            - /home/azureuser/logs:/logs
     processing:
         image: processing
         ports:
@@ -82,7 +82,7 @@ services:
             - TARGET_ENV=test
         volumes:
             - /home/azureuser/config/processing:/config
-            - /home/azureuser/logs
+            - /home/azureuser/logs:/logs
     audit:
         image: audit
         ports:
@@ -93,7 +93,7 @@ services:
             - TARGET_ENV=test
         volumes:
             - /home/azureuser/config/audit_log:/config
-            - /home/azureuser/logs
+            - /home/azureuser/logs:/logs
     dashboard:
         image: dashboard
         ports:
