--- a/Deployment/docker-compose.yml
+++ b/Deployment/docker-compose.yml
@@ -83,6 +83,7 @@ services:
         volumes:
             - /home/azureuser/config/processing:/config
             - /home/azureuser/logs:/logs
+            - processing-db: /data
     audit:
         image: audit
         ports:
@@ -104,3 +105,4 @@ services:
 
 volumes:
     my-db:
+    processing-db:
