--- a/Deployment/docker-compose.yml
+++ b/Deployment/docker-compose.yml
@@ -49,11 +49,30 @@ services:
         volumes:
             - my-db:/var/lib/mysql
         # Names our volume
-    
+    nginx:
+        image: nginx:latest
+         # Connects the conf file of the container to the conf file in our folder 
+        volumes: 
+        - /home/azureuser/nginx/nginx.conf:/etc/nginx/nginx.conf:ro 
+         # It will start up the nginx only when all api containers have started 
+        depends_on: 
+            - "receiver" 
+            - "storage" 
+            - "processing" 
+            - "audit_log" 
+            - "dashboard-ui" 
+         # Connects the port 80 of the nginx container to localhost:80 or localhost 
+        ports: 
+            - "80:80" 
+        networks: 
+            - "api.network"
+  
     receiver:
         image: receiver
         ports:
-            - "8080:8080"
+            - "8080"
+        networks:
+            - "api.network"
         depends_on:
             - "kafka"
         environment:
@@ -64,7 +83,9 @@ services:
     storage:
         image: storage
         ports:
-            - "8090:8090"
+            - "8090"
+        networks:
+            - "api.network"
         depends_on:
             - "kafka"
         environment:
@@ -75,7 +96,9 @@ services:
     processing:
         image: processing
         ports:
-            - "8100:8100"
+            - "8100"
+        networks:
+            - "api.network"
         depends_on:
             - "storage"
         environment:
@@ -87,7 +110,9 @@ services:
     audit:
         image: audit
         ports:
-            - "8110:8110"
+            - "8110"
+        networks:
+            - "api.network"
         depends_on:
             - "kafka"
         environment:
@@ -98,7 +123,9 @@ services:
     dashboard:
         image: dashboard
         ports:
-            - "3000:3000"
+            - "3000"
+        networks:
+            - "api.network"
         depends_on:
             - "processing"
             - "audit"
@@ -106,3 +133,5 @@ services:
 volumes:
     my-db:
     processing-db:
+networks:
+    api.network:
